Better structure. Fixed DB problem (I think...)

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -345,13 +345,22 @@ db {
 }
 
 # DATABASE CONFIG
-postdb = {
-  dataSourceClass = org.postgresql.ds.PGSimpleDataSource
-  properties = {
-    databaseName = "mydb3"
-    portNumber = "5433"
-    user = "postgres"
-    password = "frud"
-  }
-  numThreads = 100
-}
+#postdb = {
+#  dataSourceClass = org.postgresql.ds.PGSimpleDataSource
+ # properties = {
+  #  databaseName = "mydb3"
+   # portNumber = "5433"
+    #user = "postgres"
+    #password = "frud"
+  #}
+  #numThreads = 100
+#}
+
+slick.dbs.default.driver="slick.driver.PostgresDriver$"
+slick.dbs.default.db.driver="org.postgresql.Driver"
+slick.dbs.default.db.url="jdbc:postgresql://localhost:5433/mydb3"
+slick.dbs.default.db.user="postgres"
+slick.dbs.default.db.password="frud"
+slick.dbs.default.db.connectionTimeout=5 seconds
+slick.dbs.default.db.connectionPool = "disabled"
+slick.dbs.default.db.properties.connectionPool = "HikariCP"
