--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,23 @@
+# Ignore Play! working directory #
+bin/
+/db
+.eclipse
+/lib/
+/logs/
+/modules
+/project/target
+/target
+tmp/
+test-result
+server.pid
+*.eml
+/dist/
+.cache
+
+# Mina
+/node_modules/
+
+# Default
 logs
 target
 /.idea
