--- a/conf/application.conf
+++ b/conf/application.conf
@@ -1,3 +1,5 @@
+http.port=9000
+
 # This is the main configuration file for the application.
 # https://www.playframework.com/documentation/latest/ConfigFile
 # ~~~~~
@@ -364,3 +366,11 @@ slick.dbs.default.db.password="frud"
 slick.dbs.default.db.connectionTimeout=5 seconds
 slick.dbs.default.db.connectionPool = "disabled"
 slick.dbs.default.db.properties.connectionPool = "HikariCP"
+
+
+
+
+// USE NODE (SBT WEB)
+// Kanske kan bli problem vid deployment till Heroku?
+// Testa att kommentera bort denna vid problem.
+export SBT_OPTS="$SBT_OPTS -Dsbt.jse.engineType=Node"
