Added some configuration variables. Fixed so that images can be saved remotely.

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -374,3 +374,27 @@ slick.dbs.default.db.properties.connectionPool = "HikariCP"
 // Kanske kan bli problem vid deployment till Heroku?
 // Testa att kommentera bort denna vid problem.
 export SBT_OPTS="$SBT_OPTS -Dsbt.jse.engineType=Node"
+
+
+
+
+// For Heroku
+db.default.url=${?JDBC_DATABASE_URL}
+db.default.username=${?JDBC_DATABASE_USERNAME}
+db.default.password=${?JDBC_DATABASE_PASSWORD}
+
+// Amazon S3
+aws.access.key=${?AWS_ACCESS_KEY}
+aws.secret.key=${?AWS_SECRET_KEY}
+aws.s3.bucket=com.frud.lostandfound
+
+// Dev or Deploy
+// IF IN DEVELOPMENT
+// app.environment="http://192.168.1.45:9000"
+// app.imagepath="http://192.168.1.45:9000"
+// app.inproduction=false
+
+// IF IN PRODUCTION
+app.environment="https://s3-us-west-2.amazonaws.com/lostandfound-testbucket2"
+app.imagepath="https://s3-us-west-2.amazonaws.com/lostandfound-testbucket2/app"
+app.inproduction=true
