--- a/package.json
+++ b/package.json
@@ -3,10 +3,6 @@
   "version": "1.0.0",
   "description": "play app",
   "main": "index.js",
-  "dependencies": {
-    "browserify": "*",
-    "imagemin": "^3.1.0"
-  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -14,6 +10,7 @@
   "license": "ISC",
   "devDependencies": {
     "gulp-browser": "*",
-    "gulp-livereload": "^3.8.1"
+    "gulp-livereload": "^3.8.1",
+    "browserify": "*"
   }
 }
