--- a/conf/application.conf
+++ b/conf/application.conf
@@ -390,11 +390,11 @@ aws.s3.bucket=com.frud.lostandfound
 
 // Dev or Deploy
 // IF IN DEVELOPMENT
-// app.environment="http://192.168.1.45:9000"
-// app.imagepath="http://192.168.1.45:9000"
-// app.inproduction=false
+app.environment="http://192.168.1.45:9000"
+app.imagepath="http://192.168.1.45:9000"
+app.inproduction=false
 
 // IF IN PRODUCTION
-app.environment="https://s3-us-west-2.amazonaws.com/lostandfound-testbucket2"
-app.imagepath="https://s3-us-west-2.amazonaws.com/lostandfound-testbucket2/app"
-app.inproduction=true
+// app.environment="https://s3-us-west-2.amazonaws.com/lostandfound-testbucket2"
+// app.imagepath="https://s3-us-west-2.amazonaws.com/lostandfound-testbucket2/app"
+// app.inproduction=true
