--- a/conf/application.conf
+++ b/conf/application.conf
@@ -360,16 +360,24 @@ db {
   #numThreads = 100
 #}
 
+# DEV
+#slick.dbs.default.driver="slick.driver.PostgresDriver$"
+#slick.dbs.default.db.driver="org.postgresql.Driver"
+#slick.dbs.default.db.url="jdbc:postgresql://localhost:5433/mydb3"
+#slick.dbs.default.db.user="postgres"
+#slick.dbs.default.db.password="frud"
+#slick.dbs.default.db.connectionTimeout=5 seconds
+#slick.dbs.default.db.connectionPool = "disabled"
+#slick.dbs.default.db.properties.connectionPool = "HikariCP"
+
+// PROD (Heroku)
+#db.default.url=${?JDBC_DATABASE_URL}
+#db.default.username=${?JDBC_DATABASE_USERNAME}
+#db.default.password=${?JDBC_DATABASE_PASSWORD}
+db.default=${DATABASE_URL}
 slick.dbs.default.driver="slick.driver.PostgresDriver$"
-slick.dbs.default.db.driver="org.postgresql.Driver"
-slick.dbs.default.db.url="jdbc:postgresql://localhost:5433/mydb3"
-slick.dbs.default.db.user="postgres"
-slick.dbs.default.db.password="frud"
-slick.dbs.default.db.connectionTimeout=5 seconds
-slick.dbs.default.db.connectionPool = "disabled"
-slick.dbs.default.db.properties.connectionPool = "HikariCP"
-
-
+slick.dbs.default.db.dataSourceClass = "slick.jdbc.DatabaseUrlDataSource"
+slick.dbs.default.db.properties.driver = "org.postgresql.Driver"
 
 
 // USE NODE (SBT WEB)
@@ -377,13 +385,6 @@ slick.dbs.default.db.properties.connectionPool = "HikariCP"
 // Testa att kommentera bort denna vid problem.
 export SBT_OPTS="$SBT_OPTS -Dsbt.jse.engineType=Node"
 
-
-
-
-// For Heroku
-db.default.url=${?JDBC_DATABASE_URL}
-db.default.username=${?JDBC_DATABASE_USERNAME}
-db.default.password=${?JDBC_DATABASE_PASSWORD}
 
 // Amazon S3
 aws.access.key=${?AWS_ACCESS_KEY}
