--- a/conf/application.conf
+++ b/conf/application.conf
@@ -361,20 +361,20 @@ db {
 #}
 
 # DEV
-slick.dbs.default.driver="slick.driver.PostgresDriver$"
-slick.dbs.default.db.driver="org.postgresql.Driver"
-slick.dbs.default.db.url="jdbc:postgresql://localhost:5433/mydb3"
-slick.dbs.default.db.user="postgres"
-slick.dbs.default.db.password="frud"
-slick.dbs.default.db.connectionTimeout=5 seconds
-slick.dbs.default.db.connectionPool = "disabled"
-slick.dbs.default.db.properties.connectionPool = "HikariCP"
+#slick.dbs.default.driver="slick.driver.PostgresDriver$"
+#slick.dbs.default.db.driver="org.postgresql.Driver"
+#slick.dbs.default.db.url="jdbc:postgresql://localhost:5433/mydb3"
+#slick.dbs.default.db.user="postgres"
+#slick.dbs.default.db.password="frud"
+#slick.dbs.default.db.connectionTimeout=5 seconds
+#slick.dbs.default.db.connectionPool = "disabled"
+#slick.dbs.default.db.properties.connectionPool = "HikariCP"
 
 // PROD (Heroku)
-#db.default=${DATABASE_URL}
-#slick.dbs.default.driver="slick.driver.PostgresDriver$"
-#slick.dbs.default.db.dataSourceClass = "slick.jdbc.DatabaseUrlDataSource"
-#slick.dbs.default.db.properties.driver = "org.postgresql.Driver"
+db.default=${DATABASE_URL}
+slick.dbs.default.driver="slick.driver.PostgresDriver$"
+slick.dbs.default.db.dataSourceClass = "slick.jdbc.DatabaseUrlDataSource"
+slick.dbs.default.db.properties.driver = "org.postgresql.Driver"
 
 
 // USE NODE (SBT WEB)
