--- a/conf/application.conf
+++ b/conf/application.conf
@@ -44,7 +44,7 @@ akka {
 # The secret key is used to sign Play's session cookie.
 # This must be changed for production, but we don't recommend you change it in this file.
 play.crypto.secret = "changeme"
-play.crypto.secret=${?APPLICATION_SECRET}
+play.crypto.secret=${?LOSTANDFOUND_APPLICATIONSECRET}
 
 ## Modules
 # https://www.playframework.com/documentation/latest/Modules
